# drone-log-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/bot/: __main__.py  config.py  export_pdf.py  tasks.py
src/bot/db/: audit.py  boards.py  connection.py  employees.py  migrations.py  templates.py  work_logs.py
src/bot/handlers/: __init__.py  admin.py  board.py  history.py  log.py  start.py  template.py
src/bot/keyboards/: inline.py
src/bot/middleware/: auth.py
src/bot/states/: registration.py  work_log.py
tests/: conftest.py  test_db.py
